--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </div>
 
         <div id="foto"> 
-            <img id="imagem" src="manha.png" alt="Foto do sol nascendo"
+            <img id="imagem" src="manha.png" alt="Foto do sol nascendo"/>
         
         </div>
     </section>
     <footer>
         Create by Julia Nunes
     </footer>
-    <script src="script.js"</script>
+    <script src="script.js"></script>
     
 </body>
 </html>
